--- a/src/app/modules/update-customer/update-customer.component.html
+++ b/src/app/modules/update-customer/update-customer.component.html
@@ -2,24 +2,24 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-
+ 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css" rel="stylesheet" type="text/css" />
          <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
 
 
 <div class="container">
-<div id="accordion">
+<div id="accordion" [formGroup]="customerForm">
     
    
     <div class="card card-default">
         <div class="card-header">
-            <h4 class="card-title">
+            <h4 class="card-title"> -->
                 <!-- <a data-toggle="collapse" data-parent="#accordion" href="#collapse2"> -->
                     <!-- <i class="glyphicon glyphicon-lock text-gold"></i> -->
                     <b>Customer Card</b>
                 <!-- </a> -->
-            </h4>
+         </h4>
         </div>
         <div id="collapse2" class="collapse show">
             <div class="card-body">
@@ -73,13 +73,13 @@
                     <div class="col-md-3 col-lg-1">
                         <div class="form-group">
                             <label class="control-label">Adults</label>
-                            <input  id="adults" type="number" class="form-control" name="Adults" formControlName="Adults" />
+                            <input  id="adults" type="number" class="form-control" name="Adults" formControlName="NumOfAdults" />
                         </div>
                     </div>
                     <div class="col-md-3 col-lg-1">
                         <div class="form-group">
                             <label class="control-label">Kids</label>
-                            <input  id="kids" type="number" class="form-control" name="Kids" formControlName="Kids" />
+                            <input  id="kids" type="number" class="form-control" name="Kids" formControlName="NumOfKids" />
                         </div>
                     </div>
                     
@@ -137,4 +137,4 @@
 
    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>-->
