--- a/src/app/modules/update-customer/update-customer.component.html
+++ b/src/app/modules/update-customer/update-customer.component.html
@@ -14,7 +14,7 @@
    
     <div class="card card-default">
         <div class="card-header">
-            <h4 class="card-title"> -->
+            <h4 class="card-title"> 
                 <!-- <a data-toggle="collapse" data-parent="#accordion" href="#collapse2"> -->
                     <!-- <i class="glyphicon glyphicon-lock text-gold"></i> -->
                     <b>Customer Card</b>
