--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
-<app-admin></app-admin>
+
+<nav>
+    <ul clas="nav nav-tabs">
+        <li><a routerLink="/admin" routerLinkActive="active">Admin</a></li>
+       <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li>
+     <!--   <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">NewCustomer</a></li> -->
+    </ul>
+</nav>
+<!-- <app-admin></app-admin>
 <app-customer></app-customer>
-<app-update-customer></app-update-customer>
+<app-update-customer></app-update-customer> -->
 <router-outlet></router-outlet>
+
