--- a/src/app/modules/customer/update-customer/update-customer.component.html
+++ b/src/app/modules/customer/update-customer/update-customer.component.html
@@ -48,7 +48,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
                              </div>
-                            <input  id="Email Adress" type="email" class="form-control" name="EmailAdress" formControlName="EmailAdress" />
+                            <input  id="Email Adress" type="email" class="form-control" name="EmailAdress" formControlName="EmailAddress" />
                         </div>
                     </div>
                   
@@ -129,7 +129,7 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="pull-right">
-            <a href="#" class="btn btn-success btn-lg" id="btnSubmit"><i class="fa fa-save"></i> Save</a>
+            <a href="#" class="btn btn-success btn-lg" id="btnSubmit" (click)="saveCustomer()"><i class="fa fa-save" ></i> Save</a>
             <a class="btn btn-warning btn-lg" href="#" id="btnToTop"><i class="fa fa-arrow-up"></i> Top</a>
         </div>
     </div>
