--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <ul clas="nav nav-tabs">
         <li><a routerLink="/admin" routerLinkActive="active">Admin</a></li>
        <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li>
+       <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>
      <!--   <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">NewCustomer</a></li> -->
     </ul>
 </nav>
