--- a/src/app/modules/customer/update-customer/update-customer.component.html
+++ b/src/app/modules/customer/update-customer/update-customer.component.html
@@ -9,7 +9,7 @@
 
 
 <div class="container">
-<div id="accordion"  [formGroup]="customerForm">
+<div id="accordion"  [formGroup]="customerForm" >
     
    
     <div class="card card-default">
@@ -27,14 +27,14 @@
                     <div class="col-md-3 col-lg-5">
                         <div class="form-group">
                             <label class="control-label">First Name</label>
-                            <input id="firstName" type="text" class="form-control" name="FirstName" formControlName="FirstName"  />
+                            <input id="firstName" type="text" class="form-control" name="FirstName" formControlName="firstName"/>
                         </div>
                     </div>
 
                     <div class="col-md-4 col-lg-5">
                         <div class="form-group">
                             <label class="control-label">Last Name</label>
-                            <input  id="lastName" type="text" class="form-control" name="LastName" formControlName="LastName" />
+                            <input  id="lastName" type="text" class="form-control" name="LastName" formControlName="lastName" />
                         </div>
                     </div>
 
@@ -48,7 +48,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
                              </div>
-                            <input  id="Email Adress" type="email" class="form-control" name="EmailAdress" formControlName="EmailAddress" />
+                            <input  id="Email Adress" type="email" class="form-control" name="EmailAdress" formControlName="emailAddress" />
                         </div>
                     </div>
                   
@@ -56,14 +56,14 @@
                     <div class="col-md-3 col-lg-3">
                         <div class="form-group">
                             <label class="control-label">Phone Number</label>
-                            <input  id="Phone Number" type="text" class="form-control" name="PhoneNumber" formControlName="PhoneNumber" />
+                            <input  id="Phone Number" type="text" class="form-control" name="PhoneNumber" formControlName="phoneNumber" />
                         </div>
                     </div>
 
                     <div class="col-md-4 col-lg-5">
                         <div class="form-group">
                             <label class="control-label">Address</label>
-                            <input  id="address" type="text" class="form-control" name="Address" formControlName="Address" />
+                            <input  id="address" type="text" class="form-control" name="Address" formControlName="address" />
                         </div>
                     </div>
 
@@ -73,13 +73,13 @@
                     <div class="col-md-3 col-lg-1">
                         <div class="form-group">
                             <label class="control-label">Adults</label>
-                            <input  id="adults" type="number" class="form-control" name="Adults" formControlName="NumOfAdults" />
+                            <input  id="adults" type="number" class="form-control" name="Adults" formControlName="numOfAdults" />
                         </div>
                     </div>
                     <div class="col-md-3 col-lg-1">
                         <div class="form-group">
                             <label class="control-label">Kids</label>
-                            <input  id="kids" type="number" class="form-control" name="Kids" formControlName="NumOfKids" />
+                            <input  id="kids" type="number" class="form-control" name="Kids" formControlName="numOfKids" />
                         </div>
                     </div>
                     
@@ -88,25 +88,25 @@
                     <div class="col-1">
                         <div class="form-group">
                             <label class="control-label">HighFloor</label>
-                            <input  id="highFloor" type="checkbox" class="form-control" name="HighFloor" formControlName="HighFloor" />
+                            <input  id="highFloor" type="checkbox" class="form-control" name="HighFloor" formControlName="highFloor" />
                         </div>
                     </div>
                     <div class="col-md-1 col-lg-1">
                         <div class="form-group">
                             <label class="control-label">Porch</label>
-                            <input  id="porch" type="checkbox" class="form-control" name="Porch" formControlName="Porch" />
+                            <input  id="porch" type="checkbox" class="form-control" name="Porch" formControlName="porch" />
                         </div>
                     </div>
                     <div class="col-md-1 col-lg-1">
                         <div class="form-group">
                             <label class="control-label">Separte Beds</label>
-                            <input  id="separteBeds" type="checkbox" class="form-control" name="SeparteBeds" formControlName="SeparteBeds" />
+                            <input  id="separteBeds" type="checkbox" class="form-control" name="SeparteBeds" formControlName="separteBeds" />
                         </div>
                     </div>
                     <div class="col-md-1 col-lg-1">
                         <div class="form-group">
                             <label class="control-label">Multiple Rooms</label>
-                            <input  id="multipleRooms" type="checkbox" class="form-control" name="MultipleRooms" formControlName="MultipleRooms" />
+                            <input  id="multipleRooms" type="checkbox" class="form-control" name="MultipleRooms" formControlName="multipleRooms" />
                         </div>
                     </div>
                 </div>
@@ -114,12 +114,13 @@
                     <div class="col-md-4 col-lg-12">
                         <div class="form-group">
                             <label class="control-label">Comments</label>
-                            <input  id="comments" type="text" class="form-control" name="Comments" formControlName="Comments" />
+                            <input  id="comments" type="text" class="form-control" name="Comments" formControlName="comments" />
                         </div>
                     </div>
                 </div>
                 <!-- <button (click)="getAllCustomers()">Get All Customer</button> -->
                 <!-- <button (click)=getALLCustomerDetails()> Get All Customer Details</button> -->
+                
             </div>
         </div>
     </div>
@@ -130,6 +131,8 @@
     <div class="col-lg-12">
         <div class="pull-right">
             <a href="#" class="btn btn-success btn-lg" id="btnSubmit" (click)="saveCustomer()"><i class="fa fa-save" ></i> Save</a>
+            <a href="#" class="btn btn-success btn-lg" id="btnSubmit" (click)="onEditClickecd()"><i class="fa fa-save" ></i> Edit</a>
+            <!-- <button (click)="onEditClickecd()">edit</button> -->
             <a class="btn btn-warning btn-lg" href="#" id="btnToTop"><i class="fa fa-arrow-up"></i> Top</a>
         </div>
     </div>
@@ -140,4 +143,4 @@
    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
-<app-customer (onGetCustomerDetails)="getALLCustomerDetails()"></app-customer>
+<!-- <app-customer (onGetCustomerDetails)="getALLCustomerDetails()"></app-customer> -->
