add angular material!!

--- a/src/app/modules/customer/customer/customer.component.html
+++ b/src/app/modules/customer/customer/customer.component.html
@@ -23,6 +23,6 @@
 </ul>---->
 
  <button (click)="getAllCustomers()">Get All Customer</button>
-<button (dblclick)="getCustomerDetails(22)">Get All Customer Details</button>
-<button mat-raised-button color="primary">Primary</button> 
+<button (dblclick)="getCustomerDetails(17)">Get All Customer Details</button>
+<!-- <button mat-raised-button color="primary">Primary</button>  -->
 
