--- a/src/app/modules/customer/update-customer/update-customer.component.html
+++ b/src/app/modules/customer/update-customer/update-customer.component.html
@@ -131,7 +131,7 @@
     <div class="col-lg-12">
         <div class="pull-right">
             <a href="#" class="btn btn-success btn-lg" id="btnSubmit" (click)="saveCustomer()"><i class="fa fa-save" ></i> Save</a>
-            <a href="#" class="btn btn-success btn-lg" id="btnSubmit" (click)="onEditClickecd()"><i class="fa fa-save" ></i> Edit</a>
+            <a  class="btn btn-success btn-lg" id="btnSubmit" (click)="onEditClickecd()"><i class="fa fa-edit" ></i> Edit</a>
             <!-- <button (click)="onEditClickecd()">edit</button> -->
             <a class="btn btn-warning btn-lg" href="#" id="btnToTop"><i class="fa fa-arrow-up"></i> Top</a>
         </div>
