--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -34,7 +34,7 @@
     <form [formGroup]="adminForm">
       <input type="text" id="userName" class="fadeIn second" name="userName" placeholder="username"  formControlName="name" #name>
       <input type="text" id="password" class="fadeIn third" name="password" placeholder="password" formControlName="password"  #password>
-      <!-- <input type="submit" class="fadeIn fourth" [disabled]="!adminForm.valid"  (click)="Login(name.value,password.value)" value="Log In"> -->
+      <input type="submit" class="fadeIn fourth" [disabled]="!adminForm.valid"  (click)="Login(name.value,password.value)" value="Log In">
    <!-- <button type="submit" [disabled]="!adminForm.valid"  (click)="Login(name.value,password.value)">Login</button> -->
     <!-- Remind Passowrd -->
    </form>
