--- a/src/app/modules/customer/update-customer/update-customer.component.html
+++ b/src/app/modules/customer/update-customer/update-customer.component.html
@@ -119,6 +119,13 @@
                         </div>
                     </div>
                 </div>
+                <div class="pull-right">
+                    <a href="#" class="btn btn-success btn-lg" id="btnSubmit" (click)="saveCustomer()"><i class="fa fa-save" ></i> Save</a>
+                    <a  class="btn btn-warning btn-lg" id="btnSubmit" (click)="onEditClickecd()"><i class="fa fa-edit"></i> Edit</a>
+                    <!-- <button (click)="onEditClickecd()">edit</button> -->
+                    <a class="btn btn-warning btn-lg" href="#" id="btnToTop"><i class="fa fa-arrow-up"></i> Top</a>
+        
+                </div>
                 <!-- <button (click)="getAllCustomers()">Get All Customer</button> -->
                 <!-- <button (click)=getALLCustomerDetails()> Get All Customer Details</button> -->
                 
@@ -130,18 +137,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <div class="pull-right">
-            <a href="#" class="btn btn-success btn-lg" id="btnSubmit" (click)="saveCustomer()"><i class="fa fa-save" ></i> Save</a>
-<<<<<<< HEAD
-            <a  id="btnSubmit" (click)="onEditClickecd()"><i class="fa fa-save" ></i> Edit</a>
-         <button (click)="onEditClickecd()">edit</button> 
-         <a class="btn btn-warning btn-lg" href="#" id="btnToTop"><i class="fa fa-arrow-up"></i> Top</a>
-=======
-            <a  class="btn btn-success btn-lg" id="btnSubmit" (click)="onEditClickecd()"><i class="fal fa-user-edit"></i> Edit</a>
-            <!-- <button (click)="onEditClickecd()">edit</button> -->
-            <a class="btn btn-warning btn-lg" href="#" id="btnToTop"><i class="fa fa-arrow-up"></i> Top</a>
->>>>>>> d760dded90f8c89051bd53dca19db721aa4e1234
-        </div>
+        
     </div>
 </div>
 
