--- a/src/app/modules/customer/customer/customer.component.css
+++ b/src/app/modules/customer/customer/customer.component.css
@@ -28,3 +28,18 @@
     background-color: #42AEEC;
     color: #fff;
 }
+.example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .example-full-width {
+    width: 50%;
+  }
+  .card-default {
+    color: #333;
+    background: linear-gradient(#fff,#ebebeb) repeat scroll 0 0 transparent;
+    font-weight: 600;
+    border-radius: 6px;
+}
