--- a/src/app/modules/Admin/admin/admin.component.html
+++ b/src/app/modules/Admin/admin/admin.component.html
@@ -21,7 +21,7 @@
 <!------ Include the above in your HEAD tag ---------->
 
 <div class="wrapper fadeInDown">
-  <div style="position: relative;" id="formContent">
+  <div id="formContent">
     <!-- Tabs Titles -->
 
     <!-- Icon -->
