--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,9 @@
     <ul clas="nav nav-tabs">
         <li><a routerLink="/homePage" routerLinkActive="active">Home Page</a></li>
         <li><a routerLink="/login" routerLinkActive="active">Login</a></li>
-       <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li>
+       <!-- <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li> -->
        <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>
-     <!--   <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">NewCustomer</a></li> -->
+       <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">New Customer</a></li>
     </ul>
 </nav>
 <!-- <app-admin></app-admin>
