--- a/src/app/modules/customer/customer/customer.component.html
+++ b/src/app/modules/customer/customer/customer.component.html
@@ -1,4 +1,4 @@
- <ul class="list-group">
+ <!-- <ul class="list-group">
     <li class="list-group-item"
     *ngFor="let customer of customers">
          <div class="row" (dblclick)="getCustomerDetails(customer.id)">
@@ -19,81 +19,64 @@
             </div>
         </div>
 </li>
-</ul>
+</ul>-->
 
-<!-- <table mat-table [dataSource]="dataSource" class="mat-elevation-z8"> -->
+  <button (click)="getAllCustomers()">Get All Customer</button>
+<button (dblclick)="getCustomerDetails(17)">Get All Customer Details</button>
+<table mat-table [dataSource]="customers"  class="mat-elevation-z8">
 
-  <!-- Position Column -->
-  <!-- <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef>First Name</th>
+  <ng-container matColumnDef="firstName">
+    <th mat-header-cell *matHeaderCellDef> First Name </th>
     <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
   </ng-container>
 
-  <!-- Name Column 
-  <ng-container matColumnDef="name">
+  
+  <ng-container matColumnDef="lastName">
     <th mat-header-cell *matHeaderCellDef>Last Name </th>
     <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
-  </ng-container> -->
-
-  <!-- Weight Column
-  <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef> Weight </th>
-    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
   </ng-container>
 
-  <!-- Symbol Column -->
-  <!-- <ng-container matColumnDef="symbol">
-    <th mat-header-cell *matHeaderCellDef> Symbol </th>
-    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-  </ng-container> --> -->
+  <ng-container matColumnDef="emailAddress">
+    <th mat-header-cell *matHeaderCellDef> EmailAddress </th>
+    <td mat-cell *matCellDef="let element"> {{element.emailAddress}} </td>
+  </ng-container>
 
-  <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>-->
+  <ng-container matColumnDef="address">
+    <th mat-header-cell *matHeaderCellDef>Address</th>
+    <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+  </ng-container>
 
- <button (click)="getAllCustomers()">Get All Customer</button>
-<button (dblclick)="getCustomerDetails(17)">Get All Customer Details</button>
+  <ng-container matColumnDef="phoneNumber">
+    <th mat-header-cell *matHeaderCellDef>PhoneNumber</th>
+    <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
+  </ng-container>
+  
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+  <tr
+      mat-row
+      (dblclick)="clickedRows.add(row)"
+      [class.demo-row-is-clicked]="clickedRows.has(row)"
+      *matRowDef="let row; columns: columnsToDisplay;"
+  ></tr>
+</table>
 
-<!--<mat-dialog-actions>
-    <button mat-button mat-dialog-close>Save</button>
-     The mat-dialog-close directive optionally accepts a value as a result for the dialog. -->
-  <!--   <button mat-button [mat-dialog-close]="false">Delete</button>
-  </mat-dialog-actions>  -->
-<!-- <button mat-raised-button color="primary">Primary</button>  -->
-<!-- <br>
-<div >  
-<form class="example-form">
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>First Name</mat-label>
-      <input matInput placeholder="firstName" formControlName="firstName" >
-    </mat-form-field>
-    <br>
-      <mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>Last Name</mat-label>
-        <input matInput placeholder="lastName" name="LastName" formControlName="lastName">
-      </mat-form-field>
-      <br>
-      <mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>Phone Number</mat-label>
-        <input matInput placeholder="phoneNumber" name="PhoneNumber" formControlName="phoneNumber">
-      </mat-form-field>
-      <br>
-      <mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>Address</mat-label>
-        <input matInput placeholder="address"  name="Address" formControlName="address" >
-      </mat-form-field>
-  </form>
+<div>
+  <h3>
+    Click Log
+  </h3>
+</div>
+<!-- 
+<div *ngIf="!clickedRows.size">
+  Clicked rows will be logged here
 </div> -->
-<!-- <form (submit)="$event.preventDefault()">
-    <mat-form-field appearance="fill">
-      <mat-label>First name</mat-label>
-      <input matInput #first>
-      <mat-hint *ngIf="firstNameAutofilled">Autofilled!</mat-hint>
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-      <mat-label>Last name</mat-label>
-      <input matInput #last>
-      <mat-hint *ngIf="lastNameAutofilled">Autofilled!</mat-hint>
-    </mat-form-field>
-    <button mat-raised-button>Submit</button>
-  </form> -->
+
+<ul>
+  <li *ngFor="let clickedRow of clickedRows">
+    Clicked on {{clickedRow.id}}
+  </li>
+</ul>
+  <!-- <tr
+  mat-row
+  (dblclick)="getCustomerDetails(1)"
+  *matRowDef="let row; columns: columnsToDisplay;"
+></tr>  -->
