--- a/src/app/modules/customer/customer/customer.component.html
+++ b/src/app/modules/customer/customer/customer.component.html
@@ -21,8 +21,8 @@
 </li>
 </ul>-->
 
-  <button (click)="getAllCustomers()">Get All Customer</button>
-<button (dblclick)="getCustomerDetails(17)">Get All Customer Details</button>
+  <!-- <button (click)="getAllCustomers()">Get All Customer</button>
+<button (dblclick)="getCustomerDetails(17)">Get All Customer Details</button> -->
 <table mat-table [dataSource]="customers"  class="mat-elevation-z8">
 
   <ng-container matColumnDef="firstName">
@@ -51,32 +51,26 @@
     <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
   </ng-container>
   
-  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-  <tr
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplay" ></tr>
+   <tr
+  mat-row *matRowDef="let row; columns: columnsToDisplay;" (dblclick)="getCustomerDetails(row.id)"></tr> 
+</table>
+
+ <!-- <tr
       mat-row
       (dblclick)="clickedRows.add(row)"
       [class.demo-row-is-clicked]="clickedRows.has(row)"
       *matRowDef="let row; columns: columnsToDisplay;"
-  ></tr>
-</table>
-
-<div>
+  ></tr> -->
+<!-- <div>
   <h3>
     Click Log
   </h3>
-</div>
+</div> -->
 <!-- 
 <div *ngIf="!clickedRows.size">
   Clicked rows will be logged here
 </div> -->
 
-<ul>
-  <li *ngFor="let clickedRow of clickedRows">
-    Clicked on {{clickedRow.id}}
-  </li>
-</ul>
-  <!-- <tr
-  mat-row
-  (dblclick)="getCustomerDetails(1)"
-  *matRowDef="let row; columns: columnsToDisplay;"
-></tr>  -->
+
+ 
