--- a/src/app/modules/customer/update-customer/update-customer.component.html
+++ b/src/app/modules/customer/update-customer/update-customer.component.html
@@ -119,8 +119,6 @@
                         </div>
                     </div>
                 </div>
-<<<<<<< HEAD:src/app/modules/customer/update-customer/update-customer.component.html
-=======
                 <div class="pull-right">
                     <a href="#" class="btn btn-success btn-lg" id="btnSubmit" (click)="saveCustomer()"><i class="fa fa-save" ></i> Save</a>
                     <a  class="btn btn-warning btn-lg" id="btnSubmit" (click)="onEditClickecd()"><i class="fa fa-edit"></i> Edit</a>
@@ -128,7 +126,6 @@
                     <a class="btn btn-warning btn-lg" href="#" id="btnToTop"><i class="fa fa-arrow-up"></i> Top</a>
         
                 </div>
->>>>>>> 05d0285c9f62a856fadf86ae1d7a447e745831ce:src/app/modules/update-customer/update-customer.component.html
                 <!-- <button (click)="getAllCustomers()">Get All Customer</button> -->
                 <!-- <button (click)=getALLCustomerDetails()> Get All Customer Details</button> -->
                 
@@ -140,16 +137,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-<<<<<<< HEAD:src/app/modules/customer/update-customer/update-customer.component.html
-        <div class="pull-right">
-            <a href="#" class="btn btn-success btn-lg" id="btnSubmit" (click)="saveCustomer()"><i class="fa fa-save" ></i> Save</a>
-            <a  class="btn btn-success btn-lg" id="btnSubmit" (click)="onEditClickecd()"><i class="fal fa-user-edit"></i> Edit</a>
-            <!-- <button (click)="onEditClickecd()">edit</button> -->
-            <a class="btn btn-warning btn-lg" href="#" id="btnToTop"><i class="fa fa-arrow-up"></i> Top</a>
-        </div>
-=======
         
->>>>>>> 05d0285c9f62a856fadf86ae1d7a447e745831ce:src/app/modules/update-customer/update-customer.component.html
     </div>
 </div>
 
@@ -183,7 +171,7 @@
         <mat-label>Address</mat-label>
         <input matInput placeholder="address"  [formControl]="address" >
       </mat-form-field>
-      <!-- <button  id="btnSubmit" (click)="saveCustomer()"></button> -->
+       <button  id="btnSubmit" (click)="saveCustomer()"></button> -->
       <!-- <a href="#" class="btn btn-success btn-lg" id="btnSubmit" (click)="saveCustomer()"><i class="fa fa-save" ></i> Save</a> -->
   <!-- </form>
-</div> --> -->
+</div> --> 
