try to organize the compnants

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-login></app-login>
 <mat-tab-group>
     <mat-tab label="Calendar"><app-home-page></app-home-page> </mat-tab>
-    <mat-tab label="Customers"> <app-customer></app-customer> </mat-tab>
-    <mat-tab label="Add New Customer"> <br><app-update-customer></app-update-customer></mat-tab>
+    <mat-tab label="Customers"> <app-customer-list></app-customer-list> </mat-tab>
+    <mat-tab label="Add New Customer"> <br><app-customer-card></app-customer-card></mat-tab>
   </mat-tab-group>
 <!-- <nav>
     <ul clas="nav nav-tabs">
