--- a/src/app/modules/customer/customer-dialog/customer-dialog.component.html
+++ b/src/app/modules/customer/customer-dialog/customer-dialog.component.html
@@ -1,1 +1,1 @@
-<app-update-customer [customerID]="customerID"></app-update-customer>
+<app-customer-card [customerID]="customerID"></app-customer-card>
