--- a/src/app/modules/homePage/home-page/home-page.component.html
+++ b/src/app/modules/homePage/home-page/home-page.component.html
@@ -1,6 +1,1 @@
-<p>My Travel Agent</p>
-<div class="example-button-container">
-    <button mat-fab color="blue" aria-label="Example icon button with a bookmark icon">
-        <mat-icon>add</mat-icon>
-    </button>
-  </div>
+<p>home page</p>
