hashem will help me:)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,15 @@
 
 <nav>
     <ul clas="nav nav-tabs">
-        <li><a routerLink="/homePage" routerLinkActive="active">Home Page</a></li>
+         <li><a routerLink="/homePage" routerLinkActive="active">Home Page</a></li>
         <li><a routerLink="/login" routerLinkActive="active">Login</a></li>
-       <!-- <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li> -->
-       <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>
-       <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">New Customer</a></li>
+        <!-- <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li>   -->
+  <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li> 
+       <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">New Customer</a></li>  -->
+        <!-- <li><a routerLink="/admin" routerLinkActive="active">Admin</a></li> -->
+       <!-- <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a><//li> -->
+     <!--   <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">NewCustomer</a></li> -->
+
     </ul>
 </nav>
 <!-- <app-admin></app-admin>
