--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -15,33 +15,33 @@
     <button type="submit"   (click)="AddNewAdmin(name.value,password.value)">addNewAdmin</button> --> 
     <!-- <button mat-raised-button color="accent">Accent</button> -->
 <!-- </div> -->
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script> -->
 <!------ Include the above in your HEAD tag ---------->
-
+<!-- 
 <div class="wrapper fadeInDown">
-  <div id="formContent">
+  <div id="formContent"> -->
     <!-- Tabs Titles -->
 
     <!-- Icon -->
-    <div class="fadeIn first">
+    <!-- <div class="fadeIn first">
       <img src="https://www.b-cube.in/wp-content/uploads/2014/05/aditya-300x177.jpg" id="icon" alt="User Icon" />
       <h1>Welcome</h1>
     </div>
 
-    <!-- Login Form -->
+    Login Form
     <form [formGroup]="adminForm">
       <input type="text" id="userName" class="fadeIn second" name="userName" placeholder="username"  formControlName="name" #name>
       <input type="text" id="password" class="fadeIn third" name="password" placeholder="password" formControlName="password"  #password>
       <!-- <input type="submit" class="fadeIn fourth" [disabled]="!adminForm.valid"  (click)="Login(name.value,password.value)" value="Log In"> -->
    <!-- <button type="submit" [disabled]="!adminForm.valid"  (click)="Login(name.value,password.value)">Login</button> -->
     <!-- Remind Passowrd -->
-   </form>
+   <!-- </form>
     <div id="formFooter">
 
       <a class="underlineHover" href="#">Go to the Site</a>
     </div>
 
   </div>
-</div>
+</div> --> -->
