--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -31,17 +31,17 @@
     </div>
 
     <!-- Login Form -->
-    <form [formGroup]="adminForm">
+    <!-- <form [formGroup]="adminForm">
       <input type="text" id="userName" class="fadeIn second" name="userName" placeholder="username"  formControlName="name" #name>
       <input type="text" id="password" class="fadeIn third" name="password" placeholder="password" formControlName="password"  #password>
-      <input type="submit" class="fadeIn fourth" [disabled]="!adminForm.valid"  (click)="Login(name.value,password.value)" value="Log In">
+      <input type="submit" class="fadeIn fourth" [disabled]="!adminForm.valid"  (click)="Login(name.value,password.value)" value="Log In"> -->
    <!-- <button type="submit" [disabled]="!adminForm.valid"  (click)="Login(name.value,password.value)">Login</button> -->
     <!-- Remind Passowrd -->
-   </form>
+   <!-- </form>
     <div id="formFooter">
 
       <a class="underlineHover" href="#">Go to the Site</a>
     </div>
 
   </div>
-</div>
+</div> -->
