--- a/src/app/modules/customer/customer/customer.component.html
+++ b/src/app/modules/customer/customer/customer.component.html
@@ -20,63 +20,52 @@
         </div>
 </li>
 </ul>-->
-
-  <button (click)="getAllCustomers()">Get All Customer</button>
-<button (dblclick)="getCustomerDetails(17)">Get All Customer Details</button>
-<table mat-table [dataSource]="customers"  class="mat-elevation-z8">
-
-  <ng-container matColumnDef="firstName">
-    <th mat-header-cell *matHeaderCellDef> First Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
-  </ng-container>
-
-  
-  <ng-container matColumnDef="lastName">
-    <th mat-header-cell *matHeaderCellDef>Last Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="emailAddress">
-    <th mat-header-cell *matHeaderCellDef> EmailAddress </th>
-    <td mat-cell *matCellDef="let element"> {{element.emailAddress}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="address">
-    <th mat-header-cell *matHeaderCellDef>Address</th>
-    <td mat-cell *matCellDef="let element"> {{element.address}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="phoneNumber">
-    <th mat-header-cell *matHeaderCellDef>PhoneNumber</th>
-    <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
-  </ng-container>
-  
-  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-  <tr
-      mat-row
-      (dblclick)="clickedRows.add(row)"
-      [class.demo-row-is-clicked]="clickedRows.has(row)"
-      *matRowDef="let row; columns: columnsToDisplay;"
-  ></tr>
-</table>
-
-<div>
-  <h3>
-    Click Log
-  </h3>
-</div>
 <!-- 
-<div *ngIf="!clickedRows.size">
-  Clicked rows will be logged here
-</div> -->
+  <button (click)="getAllCustomers()">Get All Customer</button>
+<button (dblclick)="getCustomerDetails(17)">Get All Customer Details</button> -->
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="customers" matSort (matSortChange)="announceSortChange($event)">
 
-<ul>
-  <li *ngFor="let clickedRow of clickedRows">
-    Clicked on {{clickedRow.id}}
-  </li>
-</ul>
-  <!-- <tr
-  mat-row
-  (dblclick)="getCustomerDetails(1)"
-  *matRowDef="let row; columns: columnsToDisplay;"
-></tr>  -->
+    <!-- Position Column -->
+    <ng-container matColumnDef="firstName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by firstname"> First Name</th>
+      <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="lastName">
+      <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by lastname"> Last Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="emailAddress">
+      <th mat-header-cell *matHeaderCellDef> EmailAddress </th>
+      <td mat-cell *matCellDef="let element"> {{element.emailAddress}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="address">
+      <th mat-header-cell *matHeaderCellDef>Address</th>
+      <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="phoneNumber">
+      <th mat-header-cell *matHeaderCellDef> PhoneNumber </th>
+      <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+    <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"(dblclick)="getCustomerDetails(row.id)"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                 showFirstLastButtons 
+                 aria-label="Select page of customers elements">
+  </mat-paginator>
+</div>
+
+ 
+
+
+
