add css for customer-list compnent

--- a/src/app/modules/customer/customer-list/customer-list.component.html
+++ b/src/app/modules/customer/customer-list/customer-list.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z8 demo-table">
   <table mat-table [dataSource]="customers" matSort (matSortChange)="announceSortChange($event)">
 
     <!-- Position Column -->
@@ -24,7 +24,6 @@
       <th mat-header-cell *matHeaderCellDef>Address</th>
       <td mat-cell *matCellDef="let element"> {{element.address}} </td>
     </ng-container>
-
     <!-- Symbol Column -->
     <ng-container matColumnDef="phoneNumber">
       <th mat-header-cell *matHeaderCellDef> PhoneNumber </th>
