--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,18 @@
 <app-login></app-login>
-<mat-tab-group>
+<!-- <mat-tab-group>
     <mat-tab label="Calendar"><app-home-page></app-home-page> </mat-tab>
     <mat-tab label="Customers"> <app-customer-list></app-customer-list> </mat-tab>
     <mat-tab label="Add New Customer"> <br><app-customer-card></app-customer-card></mat-tab>
-  </mat-tab-group>
+  </mat-tab-group> -->
+
+
 <!-- <nav>
     <ul clas="nav nav-tabs">
          <li><a routerLink="/homePage" routerLinkActive="active">Home Page</a></li>
         <li><a routerLink="/login" routerLinkActive="active">Login</a></li>
-<<<<<<< HEAD
-        <!-- <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li>   -->
-  <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li> 
-       <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">New Customer</a></li>  -->
-        <!-- <li><a routerLink="/admin" routerLinkActive="active">Admin</a></li> -->
-       <!-- <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a><//li> -->
-     <!--   <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">NewCustomer</a></li> -->
-
-=======
         <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li> 
        <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>
        <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">New Customer</a></li>
->>>>>>> ad902364ee0cc5055377278e94de11273b7b5723
     </ul>
 </nav> -->
 <!-- <app-admin></app-admin>
