--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -33,3 +33,37 @@ $MyTravelAgent-app-theme: mat.define-light-theme((
 // that you are using.
 @include mat.all-component-themes($MyTravelAgent-app-theme);
 
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$MyTravelAgent-app-primary: mat.define-palette(mat.$indigo-palette);
+$MyTravelAgent-app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$MyTravelAgent-app-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$MyTravelAgent-app-theme: mat.define-light-theme((
+  color: (
+    primary: $MyTravelAgent-app-primary,
+    accent: $MyTravelAgent-app-accent,
+    warn: $MyTravelAgent-app-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($MyTravelAgent-app-theme);
+
