--- a/src/app/modules/Login/login/login.component.css
+++ b/src/app/modules/Login/login/login.component.css
@@ -8,7 +8,7 @@ html {
   body {
     font-family: "Poppins", sans-serif;
     height: 100vh;
-    background-image: url('src/imgs/IMG_9302.JPG');
+    background-image: url('src/imgs/hotel.jpg');
     background-size: cover;
     position: fixed;
     width: 100%;
