--- a/src/app/modules/customer/customer-list/customer-list.component.html
+++ b/src/app/modules/customer/customer-list/customer-list.component.html
@@ -1,5 +1,7 @@
 <div class="mat-elevation-z8 demo-table">
-  <table mat-table [dataSource]="customers" matSort (matSortChange)="announceSortChange($event)">
+  <table mat-table [dataSource]="customers" >
+
+  <!-- </table>matSort (matSortChange)="announceSortChange($event)"> -->
 
     <!-- Position Column -->
     <ng-container matColumnDef="firstName">
