--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-login></app-login>
+<!-- <app-login></app-login> -->
 <!-- <mat-tab-group>
     <mat-tab label="Calendar"><app-home-page></app-home-page> </mat-tab>
     <mat-tab label="Customers"> <app-customer-list></app-customer-list> </mat-tab>
@@ -6,7 +6,7 @@
   </mat-tab-group> -->
 
 
-<!-- <nav>
+<nav>
     <ul clas="nav nav-tabs">
          <li><a routerLink="/homePage" routerLinkActive="active">Home Page</a></li>
         <li><a routerLink="/login" routerLinkActive="active">Login</a></li>
@@ -14,9 +14,9 @@
        <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>
        <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">New Customer</a></li>
     </ul>
-</nav> -->
-<!-- <app-admin></app-admin>
+</nav> 
+ <!-- <app-admin></app-admin>
 <app-customer></app-customer>
 <app-update-customer></app-update-customer> -->
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 
