lo asinu clum!!!

--- a/src/app/modules/customer/customer-card/customer-card.component.html
+++ b/src/app/modules/customer/customer-card/customer-card.component.html
@@ -119,18 +119,13 @@
                     </div>
                 </div>
                 <div class="pull-right">
-                    <a href="#" class="btn btn-success btn-lg" id="btnSubmit" (click)="saveCustomer()"><i class="fa fa-save" ></i> Save</a>
+                    <a href="" class="btn btn-success btn-lg" id="btnSubmit" (click)="saveCustomer()"><i class="fa fa-save" ></i> Save</a>
                     <a  class="btn btn-warning btn-lg" id="btnSubmit" (click)="onEditClickecd()"><i class="fa fa-edit"></i> Edit</a>
  
                     <a class="btn btn-warning btn-lg" href="#" id="btnToTop"><i class="fa fa-arrow-up"></i> Top</a>
         
                 </div>
               
-                <div class="example-button-container">
-                    <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
-                      <mat-icon>delete</mat-icon>
-                    </button>
-                </div>
          </div>
         </div>
     </div>
