--- a/src/app/modules/customer/customer-list/customer-list.component.css
+++ b/src/app/modules/customer/customer-list/customer-list.component.css
@@ -32,3 +32,11 @@ table {
 .mat-row:nth-child(odd) {
   background-color: #FFFFFF;
 }
+
+table {
+  width: 100%;
+}
+
+th.mat-sort-header-sorted {
+  color: black;
+}
