add ful calendar and kendo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,10 +12,11 @@
         <li><a routerLink="/login" routerLinkActive="active">Login</a></li>
         <!-- <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li>  -->
        <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>
-       <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">New Customer</a></li>
+       <li><a routerLink="/customer/NewCustomer" >New Customer</a></li>
     </ul>
 </nav> 
 </div>
+
  <!-- <app-admin></app-admin>
 <app-customer></app-customer>
 <app-update-customer></app-update-customer> -->
