--- a/src/app/modules/homePage/home-page/home-page.component.html
+++ b/src/app/modules/homePage/home-page/home-page.component.html
@@ -1,2 +1,4 @@
 <p>home page</p>
 <!-- <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>-->
+<button (click)="toggleWeekends()">toggle weekends</button>
+<full-calendar [options]="calendarOptions"></full-calendar>
