--- a/src/app/modules/customer/customer-list/customer-list.component.html
+++ b/src/app/modules/customer/customer-list/customer-list.component.html
@@ -74,7 +74,8 @@
   </ng-container>
 
   <ng-container matColumnDef="phoneNumber">
-    <th mat-header-cell *matHeaderCellDef>PhoneNumber</th>
+    <th mat-head
+    er-cell *matHeaderCellDef>PhoneNumber</th>
     <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
   </ng-container>
   
