michal at home, tried to do the routing from home-page to the rest components

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 /* elements */
 body{
-    background-image: url('src/imgs/IMG_9302.JPG');
+    background-image: url('src/imgs/hotel-room.jpg');
     background-size: cover;
     position: fixed;
     width: 100%;
