--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -9,6 +9,12 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
+@import '~material-icons-font/sass/variables';
+ @import '~material-icons-font/sass/mixins';
+ $MaterialIcons_FontPath: "~material-icons-font/fonts";
+ @import '~material-icons-font/sass/main';
+ @import '~material-icons-font/sass/Regular';
+
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
