--- a/src/app/modules/homePage/home-page/home-page.component.css
+++ b/src/app/modules/homePage/home-page/home-page.component.css
@@ -5,18 +5,19 @@
     background-color: white;
     /* color: rgb(141,194, 249); */
     width: 100%;
-    height: 7%;
+    height: 10%;
     position:fixed;
-    top: 5%;
+    top: 4%;
     opacity: 0.5;
 }
 
 .router-outlet-component{
     background-color: white;
     opacity: 0.9;
-    width: 90%;
-    height: 82%;
+    /* width: 90%; */
+    height: 80%;
     position: fixed;
-    top:15%;
+    top:18%;
     left:5%;
+    right: 5%;
 }
