--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,40 +4,125 @@
     <mat-tab label="Customers"> <app-customer-list></app-customer-list> </mat-tab>
     <mat-tab label="Add New Customer"> <br><app-customer-card></app-customer-card></mat-tab>
   </mat-tab-group> -->
-
-  <!-- <div *ngIf="authorized">
+<!-- <div *ngIf="authorized">
     <nav>
         <ul class="nav nav-tabs" >
              <li ><a routerLink="/homePage" routerLinkActive="active"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon></a></li>
-            <li><a routerLink="/login" routerLinkActive="active">Login</a></li> -->
-            <!-- <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li>  -->
-           <!-- <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>
+            <li><a routerLink="/login" routerLinkActive="active">Login</a></li> 
+             <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li>  -->
+          <!-- <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>
            <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">New Customer</a></li>
+           <li><a routerLink="/calendar" routerLinkActive="active">Calendar</a></li>
         </ul>
     </nav> 
-    </div> -->
+    </div>  -->
      <!-- <app-admin></app-admin>
     <app-customer></app-customer>
     <app-update-customer></app-update-customer> -->
-    <!-- <router-outlet></router-outlet> -->
+    <router-outlet></router-outlet>
 
 
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
  <title>Document</title>
 </head>
 <body>
-    <!-- <div class="tabs" *ngIf="authorized">
-      <button><a routerLink="/homePage" routerLinkActive="active"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon></a></button>
-      <button><a routerLink="/customer" routerLinkActive="active">Customers</a></button>
-      <button><a routerLink="/customer/NewCustomer" routerLinkActive="active">New Customer</a></button>
-    </div> -->
-      <router-outlet></router-outlet>
+  <div class="px-3 py-2 bg-dark text-white">
+    <div class="container">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+        <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
+          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+        </a>
+
+        <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+          <li>
+            <a href="#" class="nav-link text-secondary">
+              <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#home"></use></svg>
+              Home
+            </a>
+          </li>
+          <li>
+            <a href="#" class="nav-link text-white">
+              <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#speedometer2"></use></svg>
+              Dashboard
+            </a>
+          </li>
+          <li>
+            <a href="#" class="nav-link text-white">
+              <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#table"></use></svg>
+              Orders
+            </a>
+          </li>
+          <li>
+            <a href="#" class="nav-link text-white">
+              <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#grid"></use></svg>
+              Products
+            </a>
+          </li>
+          <li>
+            <a href="#" class="nav-link text-white">
+              <!-- <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person-circle" viewBox="-10 -10 16 16">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+              </svg> -->
+              <mat-icon>account_circle</mat-icon>
+              <!-- <i class="bi bi-person-circle"></i> -->
+              <br>
+              <!-- <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#people-circle"></use></svg> -->
+              Customers
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+    <div class="tabs" *ngIf="authorized">
+      <div *ngIf="authorized">
+        <nav>
+            <ul class="nav nav-tabs" >
+                 <li ><a routerLink="/homePage" routerLinkActive="active"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon></a></li>
+                <li><a routerLink="/login" routerLinkActive="active">Login</a></li> 
+                <!-- <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li>  -->
+              <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>
+               <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">New Customer</a></li>
+               <li><a routerLink="/calendar" routerLinkActive="active">Calendar</a></li>
+            </ul>
+        </nav> 
+        </div>
+    </div> 
+       <router-outlet></router-outlet>
 </body>
+</html> 
+
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <title>Hello, world!</title>
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    -->
+  </body>
 </html>
-
-
 
 
