--- a/src/app/modules/Calendar/calendar/calendar.component.html
+++ b/src/app/modules/Calendar/calendar/calendar.component.html
@@ -1,3 +1,3 @@
 <p>calendar works!</p>
-<!-- <button (click)="toggleWeekends()">toggle weekends</button> -->
-<!-- <full-calendar [options]="calendarOptions"></full-calendar> -->
+<button (click)="toggleWeekends()">toggle weekends</button>
+<full-calendar [options]="calendarOptions"></full-calendar>
