--- a/src/app/modules/homePage/home-page/home-page.component.html
+++ b/src/app/modules/homePage/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
  <title>Document</title>
@@ -13,6 +13,6 @@
       <router-outlet></router-outlet>
     </div>
 </body>
-</html>
+</html> -->
 
 
