--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,38 +5,38 @@
     <mat-tab label="Add New Customer"> <br><app-customer-card></app-customer-card></mat-tab>
   </mat-tab-group> -->
 
-  <!-- <div *ngIf="authorized">
+  <div *ngIf="authorized">
     <nav>
         <ul class="nav nav-tabs" >
              <li ><a routerLink="/homePage" routerLinkActive="active"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon></a></li>
-            <li><a routerLink="/login" routerLinkActive="active">Login</a></li> -->
+            <li><a routerLink="/login" routerLinkActive="active">Login</a></li> 
             <!-- <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li>  -->
-           <!-- <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>
-           <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">New Customer</a></li>
+          <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>
+           <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">New Customer</a></li> 
         </ul>
     </nav> 
-    </div> -->
+    </div> --> -->
      <!-- <app-admin></app-admin>
     <app-customer></app-customer>
     <app-update-customer></app-update-customer> -->
-    <!-- <router-outlet></router-outlet> -->
+    <router-outlet></router-outlet>
 
 
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
  <title>Document</title>
 </head>
 <body>
-    <!-- <div class="tabs" *ngIf="authorized">
+    <div class="tabs" *ngIf="authorized">
       <button><a routerLink="/homePage" routerLinkActive="active"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon></a></button>
       <button><a routerLink="/customer" routerLinkActive="active">Customers</a></button>
       <button><a routerLink="/customer/NewCustomer" routerLinkActive="active">New Customer</a></button>
-    </div> -->
+    </div>
       <router-outlet></router-outlet>
 </body>
-</html>
+</html> -->
 
 
 
