--- a/src/app/modules/homePage/home-page/home-page.component.html
+++ b/src/app/modules/homePage/home-page/home-page.component.html
@@ -3,7 +3,7 @@
 <head>
  <title>Document</title>
 </head>
-<body>
+<!-- <body>
     <div class="tabs">
       <button><a routerLink="/calendar" routerLinkActive="active"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon></a></button>
       <button><a routerLink="/customer" routerLinkActive="active">Customers</a></button>
@@ -12,7 +12,7 @@
     <div class="router-outlet-component">
       <router-outlet></router-outlet>
     </div>
-</body>
+</body> -->
 </html>
 
 
