--- a/src/app/modules/homePage/home-page/home-page.component.html
+++ b/src/app/modules/homePage/home-page/home-page.component.html
@@ -16,3 +16,30 @@
 </html> -->
 
 
+<mat-icon>account_circle</mat-icon>  
+<br>
+<mat-icon> person_pin</mat-icon>
+<br>
+<mat-icon>menu</mat-icon>
+<br>
+<mat-icon>event_note</mat-icon>
+<br>
+<mat-icon>add_alert</mat-icon>
+<br>
+<mat-icon>group_add</mat-icon>
+<br>
+<mat-icon>notifications</mat-icon>
+<mat-icon>notifications_off</mat-icon>
+<mat-icon>person_add</mat-icon>
+<mat-icon>delete_sweep</mat-icon>	
+<mat-icon>create</mat-icon>
+<mat-icon> mail_outline</mat-icon>
+<mat-icon> message</mat-icon>
+<mat-icon>today</mat-icon>
+<mat-icon>search</mat-icon>
+<mat-icon>home</mat-icon>
+<mat-icon>calendar_today</mat-icon>
+<br>
+<br>
+<br>
+<i class="bi bi-table"></i>
