--- a/src/app/modules/Login/login/login.component.css
+++ b/src/app/modules/Login/login/login.component.css
@@ -320,6 +320,11 @@ h1 {
  
   /* color: #cccccc; */
 }
+.mail-icon{
+  font-size: 50%;
+  text-align: left;
+  position: fixed;
+}
 
 .mat-form-field{
  width: 80%;
