--- a/src/app/modules/Login/login/login.component.html
+++ b/src/app/modules/Login/login/login.component.html
@@ -18,6 +18,7 @@
       <mat-form-field appearance="fill">
         <mat-label>Enter your Email address</mat-label>
         <input matInput type="text" id="userName" formControlName="name" >
+        <mat-icon clas="mail-icon"> mail</mat-icon>
       </mat-form-field>
     </div>
       <div>
