the mail icon inline

--- a/src/app/modules/homePage/home-page/home-page.component.html
+++ b/src/app/modules/homePage/home-page/home-page.component.html
@@ -43,3 +43,17 @@
 <br>
 <br>
 <i class="bi bi-table"></i>
+
+
+
+
+
+<br>
+<i class="fa-thin fa-id-card"></i>
+<i class="fa-thin fa-address-book"></i>
+<i class="fa-thin fa-calendar-days"></i> 
+<i class="fa-thin fa-bell"></i>
+<i class="fa-thin fa-pen-field"></i>
+<i class="fa-solid fa-calendar-days"></i>
+<i class="fa-thin fa-user-xmark"></i>
+<!-- <i></i> -->
