--- a/src/app/modules/Login/login/login.component.html
+++ b/src/app/modules/Login/login/login.component.html
@@ -17,13 +17,14 @@
       <div>
       <mat-form-field appearance="fill">
         <mat-label>Enter your Email address</mat-label>
-        <input matInput type="text" id="userName" formControlName="name" >
-        <mat-icon clas="mail-icon"> mail</mat-icon>
+        <input matInput type="text" id="userName" formControlName="name">
+        <mat-icon matSuffix > mail</mat-icon>     
       </mat-form-field>
     </div>
       <div>
         <mat-form-field appearance="fill">
           <mat-label>Enter your Password</mat-label>
+          
           <input matInput [type]="hide ? 'password' : 'text'" id="password" formControlName="password">
           <mat-icon matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
             {{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
